Updated READMEs again and added more example files and scripts to lung cancer example

--- a/example/a549/tgfb_garnet.cfg
+++ b/example/a549/tgfb_garnet.cfg
@@ -35,6 +35,6 @@ doNetwork=False
 tfDelimiter=.
 
 [expressionData]
-expressionFile=Fixed_exp.txt
+expressionFile=Tgfb_exp.txt
 pvalThresh=0.01
 qvalThresh=
