Added test scripts and updated README files. Also added images for website.

--- a/example/dnaseClus/dnaseClus_garnet.cfg
+++ b/example/dnaseClus/dnaseClus_garnet.cfg
@@ -1,4 +1,14 @@
+##
+##This configuration is used to build a default transcription factor matrix
+##to regress various gene expressiond data
+#
+#__author__='Sara JC Gosline'
+#__email__='sgosline@mit.edu'
 
+#
+#Here is where we list the necessary files for a proper run, customized based
+#on experimental data.  Replace these files names with your species/experiment-specific data
+#
 [chromatinData]
 bedfile=wgEncodeRegDnaseClusteredV2.bed
 genefile=../../data/ucsc_hg19_knownGenes.txt
