--- a/example/murineFib/murineFib_garnet.cfg
+++ b/example/murineFib/murineFib_garnet.cfg
@@ -3,7 +3,7 @@
 bedfile=wgEncodeUwDnaseFibroblastC57bl6MAdult8wksPk_Rep1AND2.narrowPeak
 genefile=../../data/ucsc_mm9_knownGenes.txt
 xreffile=../../data/ucsc_mm9_kgXref.txt
-fastafile=wgEncodeUwDnaseFibroblastC57bl6MAdult8wksPk_Rep1AND2.fasta
+fastafile=wgEncodeUwDnaseFibroblastC57bl6MAdult8wksPk_Rep1AND2.fasta.gz
 windowsize=2000
 
 [motifData]
