Update to configuration file, and more corrections to file naming in garnet.py

--- a/example/murineFib/murineFib_garnet.cfg
+++ b/example/murineFib/murineFib_garnet.cfg
@@ -10,7 +10,7 @@ windowsize=2000
 tamo_file=../../data/matrix_files/vertebrates_clustered_motifs.tamo
 genome=mm9
 numthreads=4
-doNetwork=True
+doNetwork=False
 tfDelimiter=.
 
 [expressionData]
