Replaced TGFB interactors with receptors for test case analysis. Also updated garnet to produce better error handling and configuration files.

--- a/example/dnaseClus/dnaseClus_garnet.cfg
+++ b/example/dnaseClus/dnaseClus_garnet.cfg
@@ -20,7 +20,7 @@ windowsize=2000
 tamo_file=../../data/matrix_files/vertebrates_clustered_motifs.tamo
 genome=hg19
 numthreads=4
-doNetwork=True
+doNetwork=False
 tfDelimiter=.
 
 [expressionData]
