Updated manifest to include src directory and made minor changes to garnet.py and authors document.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -11,6 +11,7 @@ recursive-exclude * *.py[co]
 prune tests
 
 recursive-include data *
+recursive-include src *
 
 include example *
 recursive-include example *.cfg
