--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ before_install:
 
   # install matplotlib system dependencies
   - sudo apt-get -qq update
-  - sudo apt-get install -y libx11-dev
+  - sudo apt-get install -y libx11-dev 
+  
+  # install msgsteiner dependencies
+  - sudo apt-get install -y libboost-dev
 
   # install msgsteiner
   - wget http://areeweb.polito.it/ricerca/cmp/sites/default/files/msgsteiner-1.1.tgz
