--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
   - source activate testenv
 
   # install python dependencies
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
 
   # also install test dependencies
   - pip install pytest>=2.9.2
