--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_install:
   # install conda to help with numpy/scipy system dependencies
   - wget https://repo.continuum.io/miniconda/Miniconda2-4.0.5-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b -p "/home/travis/mc"
+  - export CONDA_PREFIX=/home/travis/mc
+  - ./miniconda.sh -b -p "$CONDA_PREFIX"
+  - export PATH="$CONDA_PREFIX/bin":$PATH
 
   # install matplotlib system dependencies
   - sudo apt-get -qq update
@@ -42,7 +44,9 @@ install:
   - source activate testenv
 
   # debug
+  - echo $PATH
   - echo $MSGSTEINER_PATH
+  - echo $CONDA_PREFIX
 
   # install python dependencies
   - pip install -r requirements.txt
@@ -53,5 +57,4 @@ install:
   # install our package
   - python setup.py install
 
-# command to run tests, e.g. python setup.py test
 script: python setup.py test -a "--msgpath=$MSGSTEINER_PATH"
