--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 
 before_install:
   # install conda to help with numpy/scipy system dependencies
-  - wget https://repo.continuum.io/miniconda/Miniconda2-4.0.5-Linux-x86_64.sh -O miniconda.sh
+  - wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - export CONDA_PREFIX=/home/travis/mc
   - ./miniconda.sh -b -p "$CONDA_PREFIX"
