--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ before_install:
   - sudo apt-get install -y libboost-dev libboost-program-options-dev
 
   # install msgsteiner
-  - wget http://areeweb.polito.it/ricerca/cmp/sites/default/files/msgsteiner-1.1.tgz
-  - tar xzf msgsteiner-1.1.tgz
-  - cd msgsteiner-1.1
+  - wget http://staff.polito.it/alfredo.braunstein/code/msgsteiner-1.3.tgz
+  - tar xzf msgsteiner-1.3.tgz
+  - cd msgsteiner-1.3
   - patch Makefile ../patches/Makefile.linux.patch
   - make
   - export MSGSTEINER_PATH="$(pwd -P)/msgsteiner"
