Update relative paths in Garnet integration test config file

--- a/example/a549/tgfb_foxa1_garnet.cfg
+++ b/example/a549/tgfb_foxa1_garnet.cfg
@@ -17,9 +17,9 @@ bedfile=A549_FOXA1_broadPeak.bed
 fastafile=A549_FOXA1_broadPeak.fasta
 
 #gene file reflects the UCSC mapping of known genes from the Galaxy website
-genefile=../data/ucsc_hg19_knownGenes.txt
+genefile=../../data/ucsc_hg19_knownGenes.txt
 #xref file to map gene names to UCSC identfiers
-xreffile=../data/ucsc_hg19_kgXref.txt
+xreffile=../../data/ucsc_hg19_kgXref.txt
 
 
 #distance to look from transcritpion start site
@@ -27,7 +27,7 @@ windowsize=2000
 
 [motifData]
 #motif matrices to be used
-tamo_file=../data/matrix_files/vertebrates_clustered_ic8_motifs.tamo
+tamo_file=../../data/matrix_files/vertebrates_clustered_ic8_motifs.tamo
 #settings for scanning
 genome=hg19
 numthreads=4
